force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/KimbleOne__CustomerServiceRequest__c.object-meta.xml
<CustomObject>
    <label>Customer Service Request</label>
    <nameField>
        <label>CustomerServiceRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>