force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__ActivityAssignment__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityAssignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Assignment</label>
    <referenceTo>KimbleOne__ActivityAssignment__c</referenceTo>
    <relationshipLabel>Customer Service Requests</relationshipLabel>
    <relationshipName>CustomerServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>