force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__CustomerDeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CustomerDeliveryGroup__c</fullName>
    <label>Customer Delivery Group</label>
    <referenceTo>KimbleOne__CustomerDeliveryGroup__c</referenceTo>
    <relationshipLabel>Customer Service Requests</relationshipLabel>
    <relationshipName>CustomerServiceRequests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>