force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__Notes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Notes__c</fullName>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>