force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__RequiredUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RequiredUsage__c</fullName>
    <label>RequiredUsage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>