force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__StartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>