force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__StartTime__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StartTime__c</fullName>
    <label>Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>