force-app/main/default/objects/KimbleOne__CustomerServiceRequest__c/fields/KimbleOne__TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TimeZoneSidKey__c</fullName>
    <label>Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>